[Payments] Handle clicking back on the CVC unmask dialog

Was previously crashing because the AutofillPaymentInstrument delegate
was not being reset properly on back navigation. Now it is.

BUG=715093
TEST=browser_tests

Review-Url: https://codereview.chromium.org/2844293002
Cr-Commit-Position: refs/heads/master@{#467747}

Former-commit-id: f72420b280a531f5db4d636b8f1ad57cf20c9895